--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ PORT=4000
 MONGOOSE_URL=mongodb+srv://princek18:Random7896!!@cluster0.acrpe.mongodb.net/bus-DB?retryWrites=true&w=majority
 JWT_SECRET=devastation
 RESET_CODE=destruction
-SG_TOKEN=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
+SG_TOKEN=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
