--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node_modules/nodemon/bin/nodemon.js -r dotenv/config src/app.js",
-    "start": "node src/app.js",
+    "dev": "node ./node_modules/nodemon/bin/nodemon.js -r dotenv/config src/app.js",
+    "start": "node -r dotenv/config src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
